# Bassam

./: .dockerignore  .gitattributes  .gitignore  .replit  DEPLOYMENT_FIX.md  LOGIN_PAGE_FIX.md  backend_test.py  backend_test_results.json  build.sh  design_guidelines.json  old_AdminDashboard.jsx  plan.md  platform_analysis.md  pyproject.toml  replit.md  start.sh  start_prod.sh  test_result.md  test_transaction_isolation.py
.agents/: agent_assets_metadata.toml
.emergent/: emergent.yml  emergent_todos.json  summary.txt
attached_assets/: content-1774285158379.md  gates_template_1774393880673.xlsx
backend/: .env  auth.py  database.py  employee_status.py  migrate_dates.py  models.py  requirements.txt  seed_sidebar.py  server.py  ws_manager.py
frontend/: .env  craco.config.js  package.json  tailwind.config.js
memory/: CHANGELOG.md  PRD.md
test_reports/: iteration_1.json  iteration_10.json  iteration_11.json  iteration_12.json  iteration_13.json  iteration_14.json  iteration_15.json  iteration_16.json  iteration_17.json  iteration_18.json  iteration_19.json  iteration_2.json  iteration_20.json  iteration_21.json  iteration_22.json  iteration_23.json  iteration_24.json  iteration_25.json  iteration_26.json  iteration_27.json  iteration_28.json  iteration_29.json  iteration_3.json  iteration_30.json  iteration_31.json  iteration_32.json  iteration_33.json  iteration_34.json  iteration_35.json  iteration_36.json  iteration_37.json  iteration_38.json  iteration_39.json  iteration_4.json  iteration_40.json  iteration_41.json  iteration_42.json  iteration_43.json  (+16 more)
(+227 files in other folders)
