[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "arabic-reshaper==3.0.0",
    "bcrypt==4.1.3",
    "beautifulsoup4==4.14.3",
    "email-validator==2.3.0",
    "fastapi==0.110.1",
    "motor==3.3.1",
    "passlib==1.7.4",
    "pillow==12.1.1",
    "pydantic==2.12.5",
    "pyjwt==2.12.0",
    "pymongo==4.5.0",
    "python-bidi==0.6.7",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "reportlab==4.4.9",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "uvicorn==0.25.0",
    "websockets>=16.0",
]
